get app login token.